update inventory service